--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   </div>
 </template>
 
+<script src = "js/backend.js"></script>
 <script src = "js/data.js"></script>
 <script src = "js/card.js"></script>
 <script src = "js/show-card.js"></script>
